fix(templates): resolve new layout issues in Boilerplate #10038 (#10040)

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Header.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Header.razor.scss
@@ -5,6 +5,7 @@ header {
     top: 0;
     z-index: 1;
     width: 100%;
+    padding: 0.5rem;
     position: sticky;
     padding-block: 0.5rem;
     background-color: $bit-color-background-primary;
